snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/maven-metadata.xml.sha256
8ad99e7c840fc86e87d157daffdb0222411e14fad9d133fb3ec3210155ee0a5f